--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BSAuto</string>
+
+    <string name="login_email">Email</string>
+    <string name="login_pass">Password</string>
 </resources>
