--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,10 @@
     <string name="login_singup">Sing up</string>
     <string name="login_or">Or</string>
     <string name="login_singin">Sing in using</string>
+
+    <string name="singup_user">User name</string>
+    <string name="singup_repeat_pass">Repeat password</string>
+    <string name="singup_singup">Sing up</string>
+    <string name="singup_account">Already have account?</string>
+    <string name="singup_singin">Sing in</string>
 </resources>
