--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">BSAuto</string>
+    <string name="prefs_file">com.example.bsauto.PREFERENCE_FILE_KEY</string>
 
     <string name="login_email">Email</string>
     <string name="login_pass">Password</string>
@@ -14,4 +15,5 @@
     <string name="singup_singup">Sing up</string>
     <string name="singup_account">Already have account?</string>
     <string name="singup_singin">Sing in</string>
+
 </resources>
