--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,15 @@
     <string name="singup_account">Already have account?</string>
     <string name="singup_singin">Sing in</string>
 
+    <string name="nav_header_user">Nombre de usuario</string>
+    <string name="nav_header_email">usuario@gmail.com</string>
+
+    <string name="menu_start">Start</string>
+    <string name="menu_my_posts">My posts</string>
+    <string name="menu_maps">Maps</string>
+    <string name="menu_profile">My profile</string>
+    <string name="menu_exit">Exit</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
