--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,15 @@
     <string name="menu_maps">Maps</string>
     <string name="menu_profile">My profile</string>
     <string name="menu_exit">Exit</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="start_price">10.000 €</string>
+    <string name="start_brand">Audi</string>
+    <string name="start_model">A4</string>
+    <string name="start_location">Ciudad Real</string>
+    <string name="start_province">(Ciudad Real)</string>
+    <string name="start_year">2021</string>
+    <string name="start_fuel">Diesel</string>
+    <string name="start_change">Manual</string>
+
 
 </resources>
