Login usuario con email y contraseña

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,7 @@
     <string name="error_email">The email is already exists</string>
     <string name="error_gallery">Error: error with Gallery</string>
     <string name="error_camera">Error: error with Camera</string>
+    <string name="error_login">The email or password isn\'t correct"</string>
+    <string name="error_singup">"Format the email or password isn\'t correct"</string>
 
 </resources>
