--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,7 @@
     <string name="detail_name">Nombre Cualquiera</string>
     <string name="detail_phone">654 120 150</string>
     <string name="detail_location">GO TO LOCATION</string>
+    <string name="detail_nav">Detail</string>
 
     <string name="cancel">Cancel</string>
     <string name="caution">Caution</string>
