Añadido mapa con la posición de BSAuto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,6 +93,7 @@
     <string name="sure_update">Are you sure you want to update your account?</string>
     <string name="ok">OK</string>
     <string name="sure_delete">Are you sure you want to delete your account?</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="map_marker">BSAuto</string>
+
 </resources>
